Accept absolute Windows paths without leading slash in GN commands

Leading slash is removed before path is passed to GN when command is run
on MSYS shell. See http://www.mingw.org/wiki/Posix_path_conversion.

BUG=590686

Review URL: https://codereview.chromium.org/1742303002

Cr-Commit-Position: refs/heads/master@{#385686}

Former-commit-id: 006cf0f95a92cbd6780b9d85fad3e415fd97bec9